# llm-k8s

./: .dockerignore  .env.docker  .gitignore  CUSTOM-CA.md  DOCKER.md  Dockerfile  Makefile  README.md  README_NEW.md  docker-compose.yml  quick-start.sh
agent/: .dockerignore  .env.example  Dockerfile  mcp_config.json  mcp_config_minimal.json  pyproject.toml
agent/src/: agent.py  main.py
src/app/: layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/components/: ChatComponent.tsx
