[project]
name = "agent"
version = "0.1.0"
description = "Kubernetes AI Chatbot with Pydantic AI, Tavily, and MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn",
    "pydantic-ai-slim[ag-ui]",
    "pydantic-ai-slim[openai]",
    "pydantic-ai-slim[mcp]",
    "python-dotenv",
    "logfire>=4.10.0",
    "tavily-python>=0.5.0",
    "starlette",
]
